fix(logout): enable logout on mobile view
- bind responsiveLogout() to logout button
- refactor to use appEvenService

[Fixes #165661303]

--- a/src/app/admin/confirmation-dialog/confirmation-dialog.component.scss
+++ b/src/app/admin/confirmation-dialog/confirmation-dialog.component.scss
@@ -47,6 +47,7 @@ p {
   flex-wrap: wrap;
   align-items: flex-start;
   margin-top: 30px;
+  background-position-y: bottom;
   padding: 0;
 }
 
@@ -115,10 +116,18 @@ p {
   .arrow-icon-wrapper {
     display: none;
   }
+  .action-buttons-wrapper {
+    padding-bottom: 70px;
+    background-position-y: bottom;
+  }
 }
 
 @media screen and (max-width: 306px) {
   p {
     padding: 0 25px;
+  }
+  .action-buttons-wrapper {
+    padding-bottom: 70px;
+    background-position-y: bottom;
   }
 }
